--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "cy:notebook:headless": "npx cypress run --browser chrome --headless -C cypress.config.js",
+    "cy:notebook:headed": "npx cypress run --browser edge --headed -C cypress.config.js",
+    "cy:mobile:headless": "npx cypress run --browser chrome --headless -C cypress.env.js",
+    "cy:mobile:headed": "npx cypress run --browser edge --headed -C cypress.env.js"
   },
   "author": "Gleb Laychenkov",
   "license": "ISC",
